allow for the triangle and slides to change color mid document

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -107,8 +107,15 @@
 \colorlet{btdm@foot@page}{btdm@primary!70!btdm@background}
 }
 
-% execute mode
-\csname btdm@mode@\btdm@mode\endcsname
+% update the selected color mode
+\def\btdm@update@mode{\csname btdm@mode@\btdm@mode\endcsname}
+\btdm@update@mode
+% optional argument can be used to change the mode
+% #2 is the new color to use (btdm@primary can be used to only change mode)
+\newcommand*\UpdateBtdmColor[2][\btdm@mode]{\edef\btdm@color{#2}\edef\btdm@mode{#1}\btdm@update@mode\btdm@update@triangle}
+% we update the triangle as it is cached
+
+% TODO: table of contents should be more lowered if there are noo subsections at all
 
 \setbeamercolor{palette primary}{fg=btdm@primary}
 
@@ -332,11 +339,13 @@
 }
 
 \newdimen\btdm@vertshift \btdm@vertshift=1.5mm
-\defbeamertemplate*{frametitle}{digital-minimal}[1][]{%
-\vskip\btdm@vertshift% l margin is the left margin so it is aligned with the text
-\usebeamerfont{frametitle}\strut
-% currently we do this recalculation for one single reason: the font size could change mid-document
-\ifbtdm@largetrig@
+\newsavebox\btdm@triangle
+% generate the triangle on the left to not always do all recalculations
+\AtBeginDocument{\btdm@update@triangle\let\updateTriangle\btdm@update@triangle}
+% the update hook allows to change the triangle in color if there is a need to
+% change color mit document
+\def\btdm@update@triangle{%
+\setbox\btdm@triangle=\hbox{\usebeamerfont{frametitle}\ifbtdm@largetrig@
    % size, y shift and x shift
    \@tempdima=\dimexpr3.75ex+.45ex+3.85pt+1.3\btdm@vertshift\relax
    \@tempdimb=\dimexpr-3.75ex/2-1.45pt-.65\btdm@vertshift\relax
@@ -346,14 +355,18 @@
    \@tempdimb=\dimexpr-3.75ex/2-.94pt\relax
    \@tempdimc=\dimexpr-.25cm-.25ex\relax
 \fi
-\setbox0=\hbox{\resizebox*!\@tempdima{\@declaredcolor{btdm@block}\mdseries\faCaretLeft}}%
+\smash{\raisebox\@tempdimb{\resizebox*!\@tempdima{\@declaredcolor{btdm@block}\mdseries\faCaretLeft}}}\hskip\@tempdimc}%
+}
+
+\defbeamertemplate*{frametitle}{digital-minimal}[1][]{%
+\vskip\btdm@vertshift% l margin is the left margin so it is aligned with the text
+\usebeamerfont{frametitle}\strut
 \beamercolorbox[wd=\paperwidth,leftskip=\z@,rightskip=\z@,center,ht=3.75ex,dp=.45ex,sep=2pt,shadow=false]{frametitle}% default color
 \strut\minipage{\dimexpr\paperwidth-.5cm}%
 \hskip.5mm\usebeamercolor*[fg]{frametitle}\strut\insertframetitle
-\hskip\dimexpr\wd0+\@tempdimc+.45ex\null% account for the triangle if present
-% we use @tempdimc as it accounts for the negative shift of the whole box
+\hskip\dimexpr\wd\btdm@triangle+.45ex\null% account for the triangle if present
 \endminipage
-\llap{\smash{\raisebox\@tempdimb{\usebox0}}\hskip\@tempdimc}\strut
+\llap{\usebox\btdm@triangle}\strut
 \endbeamercolorbox
 }
 
