less invasive enumerate style

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -138,6 +138,9 @@
 \setbeamerfont{subtitle}{shape=\slshape,size=\LARGE}
 % active section in the footline, custom
 \setbeamerfont{active section in head/foot}{series=\btdm@sbseries}
+\setbeamerfont{enumerate item}{parent=normal text}
+\setbeamerfont{enumerate subitem}{parent=normal text}
+\setbeamerfont{enumerate subsubitem}{parent=normal text}
 
 \setbeamercolor{structure}{fg=btdm@primary}
 \setbeamercolor{title}{fg=btdm@primary}
