improve softtext in darkmode

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -60,11 +60,11 @@
 \def\btdm@defaultcolor{btdm@primary@default@dark}
 \colorlet{btdm@primary}{\btdm@color}
 \colorlet{btdm@text}{black!1!white}
-\colorlet{btdm@softtext}{btdm@primary!35!white}
 \colorlet{btdm@frametitle}{btdm@text}
 \colorlet{btdm@contrast}{btdm@frametitle}
 \colorlet{btdm@block}{darkgray!55!black!99!btdm@primary}
 \colorlet{btdm@background}{darkgray!99!white!99!btdm@primary}
+\colorlet{btdm@softtext}{btdm@primary!40!btdm@background!95!white}
 \colorlet{btdm@border@up}{darkgray!90!black!99!btdm@primary}
 \colorlet{btdm@border@down}{darkgray!90!black!99!btdm@primary}
 \colorlet{btdm@foot}{gray}
