fine tune  colors

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -111,9 +111,11 @@
 \definecolor{btdm@border@up}{RGB}{28,33,40}
 \colorlet{btdm@border@down}{btdm@border@up}
 \colorlet{btdm@softtext}{btdm@primary!26!btdm@background}
-\colorlet{btdm@block}{btdm@border@up!80!black!99!btdm@primary}
+\colorlet{btdm@block}{btdm@border@up!70!black!89!btdm@text}
 \colorlet{btdm@foot}{btdm@text!36!btdm@border@down}
 \colorlet{btdm@foot@page}{btdm@primary!70!btdm@background}
+\colorlet{gray}{btdm@text!40!btdm@background}
+\colorlet{lightgray}{gray!70!btdm@background}
 }
 
 % update the selected color mode
