--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -459,9 +459,7 @@
     \if@btdm@darkmode@\else\setbeamercolor{background canvas}{bg=btdm@primary}\BtdmMakeNextFullBottom\fi
     \begin{frame}[t]\relax\relax
         \hypertarget{section.\thesection}{}%
-        \null\vskip-\headheight\relax\hfill\smash{\llap{\parbox{.6\linewidth}{\raggedleft\usebeamerfont{section text}\usebeamercolor[fg]{section text}\btdm@sec@text}}}\vskip\z@\@plus 1filll\relax
-        \centering\usebeamerfont{section title}\usebeamercolor[fg]{section title}\strut\if@btdm@darkmode@\color{btdm@primary}\fi\insertsectionhead\strut\par
-        \vskip\z@\@plus 1filll\relax
+        \null\hfill\llap{\smash{\parbox{.45\linewidth}{\raggedleft\usebeamerfont{section text}\usebeamercolor[fg]{section text}\btdm@sec@text}}}\vskip3em\vfill\centering\usebeamerfont{section title}\usebeamercolor[fg]{section title}\strut\if@btdm@darkmode@\color{btdm@primary}\fi\insertsectionhead\strut\vfill
     \end{frame}
 \endgroup\fi\let\btdm@sec@text\@empty}
 \endinput
